@@ -1806,4 +1806,5 @@ b   [uuk]: fixed chat input package not setting player correctly
 b   [uuk]: fixed command execution env not fetching the position from the entity when needed
 b   [uuk]: fixed /tell command on dedicated server
 B*T [uuk]: fixed player not beeing able to pick up items (by the API method)
+BA  [uuk]: fixed Chunk.remove_block not accepting the block as an instance
 
